# Lastty

./: .gitignore  .ignore  AGENTS.md  ARCHIVE_WGPU.md  CLAUDE.md  Cargo.toml  README.md  agents.toml  cliff.toml  flake.nix  index.html  package.json  pnpm-lock.yaml  test_agent.py  vite.config.ts
.github/workflows/: ci.yml  release.yml
bench-harness/: Cargo.toml
bench-harness/src/: main.rs
docs/bench/: README.md  history.md
docs/plan/: peer-substrate.plan.md
docs/plans/: MVP_STAGES.md  RENDERER_PLAN.md
lastty-mcp/: Cargo.toml
lastty-mcp/src/: cli.rs  main.rs  mcp.rs  socket.rs
lastty-peer/: Cargo.toml
lastty-peer/src/: main.rs
pane-cli/: Cargo.toml
pane-cli/src/: main.rs
pane-protocol/: Cargo.toml
pane-protocol/src/: constants.rs  encoder.rs  lib.rs  message.rs  parser.rs  peer.rs
pane-protocol/tests/: parser_tests.rs
plans/: MVP_STAGES.md
scripts/: bump-version.mjs  compare-bench-results.mjs  flood.py  prepare-sidecars.mjs  run-pipeline-bench.sh  run-stress-bench.sh  run-xterm-bench.sh  summarize-perf-trace.mjs  summarize-xterm-bench.mjs  verify-xterm-bench-failure.mjs
scripts/stress/: simulate.mjs  summarize-stress.mjs
sdk/: pane-sdk.ts  pane_emit.sh  pane_sdk.py
src/: App.tsx  TerminalWorkspace.tsx  XtermBench.tsx  XtermTerminal.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: frame_coalesce.rs  parse_throughput.rs  render_viewport.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_runtime.rs  agents.rs  bench_corpus.rs  bus.rs  commands.rs  events.rs  font_config.rs  fonts.rs  git_branches.rs  git_graph.rs  git_info.rs  git_pr.rs  git_util.rs  git_worktrees.rs  input.rs  lib.rs  main.rs  perf_registry.rs  render_sync.rs  runtime_modes.rs  worktree_prep.rs
src-tauri/src/adapters/: claude_code.rs  codex.rs  mod.rs  runner.rs
src-tauri/src/history/: claude.rs  codex.rs  mod.rs
src-tauri/src/peer/: channel.rs  mod.rs  outbound.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/renderer/: atlas.rs  glyph_shader.wgsl  mod.rs  panes.rs  rects.rs  shader.wgsl
src-tauri/src/substrate/: agent.rs  app.rs  broker.rs  commands.rs  doc.rs  ids.rs  intent.rs  llm.rs  mod.rs  planner_seed.rs  registry.rs  schema.rs  view.rs
src-tauri/src/terminal/: attention.rs  event_proxy.rs  manager.rs  mod.rs  osc7.rs  render.rs  session.rs
src-tauri/tests/: history_integration.rs
src/app/: agentDerived.test.ts  agentDerived.ts  agentStore.test.ts  agentStore.ts  agentUi.test.ts  agentUi.ts  keybindings.test.ts  keybindings.ts  layout.test.ts  layout.ts  peerStore.test.ts  peerStore.ts  peerTypes.ts  recentProjects.test.ts  recentProjects.ts  recordings.test.ts  recordings.ts  rules.test.ts  rules.ts  sessionRestore.test.ts  sessionRestore.ts  stressDriver.ts  xtermFrame.test.ts  xtermFrame.testUtils.ts  xtermFrame.ts  xtermSelection.test.ts  xtermSelection.ts
src/components/: KeyboardHelpOverlay.test.tsx  KeyboardHelpOverlay.tsx  NewViewWelcome.logic.test.ts  NewViewWelcome.logic.ts  NewViewWelcome.tsx  RecordingReplay.test.tsx  RecordingReplay.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  TerminalHostRegistry.ts  TerminalViewport.test.tsx  TerminalViewport.tsx  UpdateBadge.test.tsx  UpdateBadge.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  terminalTheme.ts
src/components/agent/: AgentInspector.tsx  AgentShell.tsx  AlertBar.tsx  BranchList.tsx  CommitGraph.tsx  DesktopStrip.tsx  EdgeSpawner.tsx  HistoryPanel.tsx  MergeButton.tsx  MergeDialog.tsx  NotificationToasts.tsx  PaneFooter.tsx  ProgressBar.tsx  ReplyInput.tsx  SessionList.test.ts  SessionList.tsx  Sidebar.tsx  StatusBadge.tsx  TabStrip.tsx  ThemeToggle.tsx  TrafficLights.tsx  TranscriptView.tsx  ViewPreview.tsx  WindowHeader.tsx  WorktreeList.test.ts  WorktreeList.tsx
src/components/peer/: ChatPanel.tsx
src/hooks/: useAppearance.ts  useKeyboardMode.ts  useLastAgent.ts  useLastLaunchPrefs.ts  useShowGitGraph.ts  useThemeOverride.ts
src/lib/: graphLayout.test.ts  graphLayout.ts  ipc.ts  relativeTime.test.ts  relativeTime.ts  updater.test.ts  updater.ts
src/styles/: agent.css  tokens.css
src/substrate/: AppPane.tsx  CompareApp.tsx  SpawnBar.tsx  SubstrateWorkspace.tsx  ipc.ts  primitives.tsx  substrate.test.ts  types.ts  useAppDoc.ts
