[package]
name = "lastty"
version = "0.1.0"
edition = "2021"
default-run = "lastty"

[lib]
name = "lastty"
path = "src/lib.rs"

[[bin]]
name = "lastty"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "test"] }
tauri-build = { version = "2", features = [] }
alacritty_terminal = "0.26"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pane-protocol = { path = "../pane-protocol" }
toml = "0.8"
polling = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
