[package]
name = "lastty"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
default-run = "lastty"

[lib]
name = "lastty"
path = "src/lib.rs"

[features]
default = []
# Bench-only code paths (xterm + stress benches, perf registry, simulator IPC).
# Stripped from default release builds so production binaries don't carry any
# benchmark instrumentation. Enable with `cargo build --features bench`.
bench = []

[[bin]]
name = "lastty"
path = "src/main.rs"

[dependencies]
# devtools feature: keep Inspect Element available in release for debugging.
tauri = { version = "2", features = ["test", "devtools"] }
tauri-build = { version = "2", features = [] }
alacritty_terminal = "0.26"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pane-protocol = { path = "../pane-protocol" }
toml = "0.8"
polling = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_viewport"
harness = false
required-features = ["bench"]

[[bench]]
name = "parse_throughput"
harness = false
required-features = ["bench"]

[[bench]]
name = "frame_coalesce"
harness = false
required-features = ["bench"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
